# Watch

./: .gitignore  Cargo.toml  README.md  build.rs  justfile
installer/: build-installer.ps1  install.ps1  uninstall.ps1
src/: allanime.rs  main.rs
