[package]
name = "Watch"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", package = "gpui_platform" }
raw-window-handle = "0.6"
rfd = "0.15"
serde_json = "1"

[build-dependencies]
embed-resource = "3.0.9"
resvg = "0.45.1"

[profile.release]
codegen-units = 256
incremental = true
lto = false
opt-level = 2

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }
# smallvec is included here for convenience, it is used by gpui when creating
# components that can have children. uncomment this line or
# use `cargo add smallvec` to add it to your project
#smallvec = "1.13.2"
