[package]
name = "Watch"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", package = "gpui_platform" }
raw-window-handle = "0.6"
rfd = "0.15"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes = "0.8"
base64 = "0.22"
ctr = "0.9"
sha2 = "0.10"
ureq = { version = "2", features = ["json"] }

[build-dependencies]
embed-resource = "3.0.9"
resvg = "0.45.1"

[profile.release]
codegen-units = 256
incremental = true
lto = false
opt-level = 2

[profile.dist]
inherits = "release"
codegen-units = 1
incremental = false
lto = "thin"
opt-level = 3
strip = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }
# smallvec is included here for convenience, it is used by gpui when creating
# components that can have children. uncomment this line or
# use `cargo add smallvec` to add it to your project
#smallvec = "1.13.2"
